syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/msh2107/chat/pkg/chat_v1;chat_v1";

service ChatV1 {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
  rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse);
}

message CreateRequest {
  repeated int64 users = 1;
  int64 owner_id = 2;
}

message CreateResponse {
  int64 chat_id = 1;
}

message DeleteRequest {
  int64 chat_id = 1;
}

message SendMessageRequest {
  MessageInfo info = 1;
}

message GetMessagesRequest {
  int64 chat_id = 1;
  int64 limit = 2;
}

message GetMessagesResponse {
  repeated Message messages = 1;
}

message MessageInfo {
  int64 chat_id = 1;
  int64 from = 2;
  string text = 3;
}

message Message {
  int64 id = 1;
  MessageInfo info = 2;
  google.protobuf.Timestamp sent_at = 3;
}